--- a/app/src/main/res/layout/activity_edit_profile.xml
+++ b/app/src/main/res/layout/activity_edit_profile.xml
@@ -153,6 +153,9 @@
                         android:inputType="none"
                         android:textSize="14sp"
                         android:maxLines="1"
+                        android:focusable="false"
+                        android:focusableInTouchMode="false"
+                        android:cursorVisible="false"
                         android:textColor="@color/secondaryColor" />
 
                 </com.google.android.material.textfield.TextInputLayout>
