--- a/app/src/main/res/layout/activity_usage.xml
+++ b/app/src/main/res/layout/activity_usage.xml
@@ -33,10 +33,8 @@
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/appBarLayout"
-        app:layout_constraintVertical_bias="1.0">
+        app:layout_constraintTop_toBottomOf="@id/appBarLayout">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
@@ -80,92 +78,96 @@
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent">
 
-
                     <androidx.constraintlayout.widget.ConstraintLayout
                         android:id="@+id/card_package"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:minHeight="175dp"
-                        app:layout_constraintTop_toBottomOf="@+id/content">
+                        android:background="@drawable/plan_bronze">
 
-                        <TextView
-                            android:id="@+id/tvCurrentPackage"
-                            style="@style/MontserratSemiBold"
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:orientation="vertical"
+                            android:gravity="center_vertical"
+                            app:layout_constraintTop_toTopOf="parent"
+                            app:layout_constraintBottom_toBottomOf="parent">
+
+                            <TextView
+                                android:id="@+id/tvCurrentPackage"
+                                style="@style/MontserratSemiBold"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_marginStart="16dp"
+                                android:textSize="50sp"
+                                android:textStyle="bold"
+                                android:text="Bronze"
+                                android:textColor="@color/bronze" />
+
+                            <TextView
+                                android:id="@+id/tvCurrentSpeed"
+                                style="@style/MontserratSemiBold"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_marginStart="16dp"
+                                android:layout_marginTop="-8dp"
+                                android:textSize="11sp"
+                                android:textStyle="bold"
+                                android:text="Speed up to 15 mb/s"
+                                android:textColor="@color/bronze" />
+
+                            <TextView
+                                android:id="@+id/tvCurrentServiceDate"
+                                style="@style/MontserratSemiBold"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_marginStart="16dp"
+                                android:textSize="11sp"
+                                android:textStyle="bold"
+                                android:text="Service date : 15  September 2023"
+                                android:textColor="@color/bronze" />
+
+                            <TextView
+                                android:id="@+id/tvCurrentLocation"
+                                style="@style/MontserratSemiBold"
+                                android:layout_width="300dp"
+                                android:layout_height="wrap_content"
+                                android:layout_marginStart="16dp"
+                                android:textSize="11sp"
+                                android:textStyle="bold"
+                                android:text="Location : Dharmasushada Indah VI No. 100, Surabaya"
+                                android:textColor="@color/bronze" />
+
+                        </LinearLayout>
+
+                        <androidx.cardview.widget.CardView
+                            android:id="@+id/btnChangePlan"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_marginStart="16dp"
-                            android:layout_marginTop="32dp"
-                            android:textColor="@color/silver"
-                            android:textSize="50sp"
-                            android:textStyle="bold"
-                            app:layout_constraintStart_toStartOf="parent"
-                            app:layout_constraintTop_toTopOf="parent" />
+                            android:layout_marginTop="16dp"
+                            android:layout_marginRight="16dp"
+                            app:cardCornerRadius="25dp"
+                            app:cardElevation="0dp"
+                            app:layout_constraintTop_toTopOf="parent"
+                            app:layout_constraintEnd_toEndOf="parent">
 
-                        <TextView
-                            android:id="@+id/tvCurrentSpeed"
-                            style="@style/MontserratSemiBold"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_marginStart="16dp"
-                            android:layout_marginTop="-8dp"
-                            android:textColor="@color/silver"
-                            android:textSize="11sp"
-                            android:textStyle="bold"
-                            app:layout_constraintStart_toStartOf="parent"
-                            app:layout_constraintTop_toBottomOf="@+id/tvCurrentPackage" />
-
-                        <TextView
-                            android:id="@+id/tvCurrentServiceDate"
-                            style="@style/MontserratSemiBold"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_marginStart="16dp"
-                            android:textColor="@color/silver"
-                            android:textSize="11sp"
-                            android:textStyle="bold"
-                            app:layout_constraintStart_toStartOf="parent"
-                            app:layout_constraintTop_toBottomOf="@+id/tvCurrentSpeed" />
-
-                        <TextView
-                            android:id="@+id/tvCurrentLocation"
-                            style="@style/MontserratSemiBold"
-                            android:layout_width="200dp"
-                            android:layout_height="wrap_content"
-                            android:layout_marginStart="16dp"
-                            android:textColor="@color/silver"
-                            android:textSize="11sp"
-                            android:textStyle="bold"
-                            app:layout_constraintStart_toStartOf="parent"
-                            app:layout_constraintTop_toBottomOf="@+id/tvCurrentServiceDate" />
-
-                        <androidx.appcompat.widget.LinearLayoutCompat
-                            android:id="@+id/linearLayoutButton2"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            app:layout_constraintEnd_toEndOf="parent"
-                            app:layout_constraintTop_toTopOf="parent">
-
-                            <FrameLayout
-                                android:layout_width="0dp"
-                                android:layout_height="48dp"
-                                android:layout_weight="1">
-
-                                <androidx.cardview.widget.CardView
-                                    android:id="@+id/btnChangePlan"
-                                    android:layout_width="wrap_content"
-                                    android:layout_height="match_parent"
-                                    android:backgroundTint="@color/silver"
-                                    android:foreground="?attr/selectableItemBackground"
-                                    app:cardCornerRadius="15dp"
-                                    app:cardElevation="0dp" />
-                            </FrameLayout>
-                        </androidx.appcompat.widget.LinearLayoutCompat>
-
+                            <TextView
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:background="@drawable/cardview_border"
+                                android:foreground="?attr/selectableItemBackground"
+                                android:gravity="center"
+                                android:paddingVertical="8dp"
+                                android:text="Upgrade"
+                                android:textColor="@color/white"
+                                android:textSize="16sp"
+                                android:textStyle="bold" />
+                        </androidx.cardview.widget.CardView>
                     </androidx.constraintlayout.widget.ConstraintLayout>
-
                 </androidx.cardview.widget.CardView>
 
                 <androidx.cardview.widget.CardView
+                    android:visibility="gone"
                     android:id="@+id/card_package_none"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -173,95 +175,98 @@
                     android:layout_marginTop="16dp"
                     android:layout_marginEnd="16dp"
                     android:layout_marginBottom="16dp"
-                    app:cardCornerRadius="15dp"
+                    app:cardElevation="0dp"
+                    app:cardCornerRadius="16dp"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent">
 
-
                     <androidx.constraintlayout.widget.ConstraintLayout
                         android:id="@+id/backgroundNoPlan"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:visibility="gone"
                         android:background="@drawable/plan_none"
                         android:minHeight="175dp"
                         app:layout_constraintTop_toBottomOf="@+id/content">
 
-                        <TextView
-                            android:id="@+id/tvNoPlan"
-                            android:layout_width="wrap_content"
+                        <LinearLayout
+                            android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:fontFamily="@font/montserrat_semi_bold"
-                            android:text="You don't have any plans for now"
-                            android:textColor="@color/lightGray2"
-                            app:layout_constraintBottom_toBottomOf="parent"
-                            app:layout_constraintEnd_toEndOf="parent"
-                            app:layout_constraintStart_toStartOf="parent"
-                            app:layout_constraintTop_toTopOf="parent" />
+                            android:orientation="vertical"
+                            android:gravity="center_horizontal"
+                            app:layout_constraintTop_toTopOf="parent"
+                            app:layout_constraintBottom_toBottomOf="parent">
 
-                        <androidx.appcompat.widget.LinearLayoutCompat
-                            android:id="@+id/linearLayoutButton3"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_marginTop="16dp"
-                            app:layout_constraintEnd_toEndOf="parent"
-                            app:layout_constraintStart_toStartOf="parent"
-                            app:layout_constraintTop_toBottomOf="@+id/tvNoPlan">
+                            <TextView
+                                android:id="@+id/tvNoPlan"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:fontFamily="@font/montserrat_semi_bold"
+                                android:text="You don't have any plan for now"
+                                android:textColor="@color/lightGray2" />
 
-                            <FrameLayout
-                                android:layout_width="0dp"
-                                android:layout_height="48dp"
-                                android:layout_weight="1">
+                            <androidx.cardview.widget.CardView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_marginTop="16dp"
+                                app:cardCornerRadius="25dp"
+                                app:cardElevation="0dp">
 
-                                <androidx.cardview.widget.CardView
+                                <TextView
                                     android:id="@+id/btnShop"
                                     android:layout_width="match_parent"
-                                    android:layout_height="match_parent"
-                                    android:backgroundTint="@color/lightGray2"
+                                    android:layout_height="wrap_content"
+                                    android:background="@drawable/cardview_border"
                                     android:foreground="?attr/selectableItemBackground"
-                                    app:cardCornerRadius="15dp"
-                                    app:cardElevation="0dp" />
-                            </FrameLayout>
-                        </androidx.appcompat.widget.LinearLayoutCompat>
+                                    android:gravity="center"
+                                    android:paddingVertical="8dp"
+                                    android:text="Buy Plan"
+                                    android:textColor="@color/white"
+                                    android:textSize="16sp"
+                                    android:textStyle="bold" />
+                            </androidx.cardview.widget.CardView>
+
+                        </LinearLayout>
                     </androidx.constraintlayout.widget.ConstraintLayout>
                 </androidx.cardview.widget.CardView>
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
-            <TextView
-                android:id="@+id/tvDataUsage"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
-                android:layout_marginTop="8dp"
-                android:text="D A T A  U S A G E"
-                android:textStyle="bold"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/card_plan" />
-
-            <androidx.constraintlayout.widget.ConstraintLayout
+            <LinearLayout
+                android:id="@+id/layoutTahun"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:layout_marginHorizontal="16dp"
                 android:layout_marginTop="8dp"
-                android:paddingBottom="8dp"
+                app:layout_constraintTop_toBottomOf="@+id/card_plan">
+
+                <TextView
+                    android:id="@+id/tvDataUsage"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="D A T A  U S A G E"
+                    android:textStyle="bold"
+                    android:layout_weight="1"/>
+
+                <Spinner
+                    android:id="@+id/year_spinner"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"/>
+
+            </LinearLayout>
+
+            <com.github.mikephil.charting.charts.BarChart
+                android:id="@+id/chart"
+                android:layout_width="match_parent"
+                android:layout_height="300dp"
+                android:layout_marginTop="8dp"
                 android:background="@color/primaryColor"
-                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/tvDataUsage">
+                app:layout_constraintTop_toBottomOf="@+id/layoutTahun" />
 
-                <com.github.mikephil.charting.charts.LineChart
-                    android:id="@+id/chart"
-                    android:layout_width="match_parent"
-                    android:layout_height="300dp"
-                    android:layout_marginStart="8dp"
-                    android:background="@color/primaryColor"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
-            </androidx.constraintlayout.widget.ConstraintLayout>
         </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
 </androidx.constraintlayout.widget.ConstraintLayout>
